titulo original pulando linha

--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -55,7 +55,7 @@
   <h4>
     [{{ projeto.organizacao.sigla }}] {{ projeto.get_titulo }}
     {% if projeto.titulo_final and projeto.titulo_final != projeto.proposta.titulo %}
-      <span style="font-size: small; padding-left: 0.7em;"><b>
+      <span style="font-size: small; padding-left: 0.7em; display: block;"><b>
         <span lang="pt">Título original da proposta:</span>
         <span lang="en" style="display: none;">Original title of the proposal:</span>
       </b> {{projeto.proposta.titulo}}</span>
