--- a/templates/calendario_bancas.html
+++ b/templates/calendario_bancas.html
@@ -121,9 +121,9 @@
       eventRender: function(info) {
       
         if (!info.event.allDay) {
+          let time_s = info.event.start.getHours() + ':' + info.event.start.getMinutes().toString().replace(/^(\d)$/, '0$1');
+          let time_e = info.event.end.getHours() + ':' + info.event.end.getMinutes().toString().replace(/^(\d)$/, '0$1');
           if (info.view.type === "dayGridMonth" || info.view.type === "timeGridWeek") {
-            let time_s = info.event.start.getHours() + ':' + info.event.start.getMinutes().toString().replace(/^(\d)$/, '0$1');
-            let time_e = info.event.end.getHours() + ':' + info.event.end.getMinutes().toString().replace(/^(\d)$/, '0$1');
             let local = info.event.extendedProps.local;
             let nome_orientador = "";
             if (info.event.extendedProps.orientador) {
@@ -148,12 +148,11 @@
             } else {
               avaliar = info.event.extendedProps.organizacao;
             }
-            
             info.el.innerHTML = "<b>" + time_s + " - " + time_e + "</b><br><nobr style='color:#FAD2D2'>" + avaliar + "</nobr><br><nobr style='color:#F6F5A3'>" + local + "</nobr><br><nobr style='color:#E8E8E8'>" + nome_orientador + "</nobr>";
           }
           if (info.view.type === 'listMonth') {
             info.el.innerHTML = `
-            <td class="fc-list-item-time">${info.timeText}</td>
+            <td class="fc-list-item-time">${time_s} - ${time_e}</td>
             <td class="fc-list-item-marker"><span class="fc-event-dot" style="background-color: ${info.event.backgroundColor};"></span></td>
             <td class="fc-list-item-title">${info.event.title}</td>
         `;
