--- a/templates/janelas-modal.html
+++ b/templates/janelas-modal.html
@@ -27,6 +27,7 @@
           $(".selectpicker").selectpicker();
         }
         $popup.modal("show");
+        {% include "linguas_ajax.html" %}
       }
     });
   }
