--- a/administracao/templates/administracao/cadastra_usuario.html
+++ b/administracao/templates/administracao/cadastra_usuario.html
@@ -122,7 +122,9 @@
         <span lang="en">Program</span>
       </label>:
       <select id="curso" name="curso" title="Curso">
-        <option disabled selected value> -- selecione curso -- </option>
+        <option disabled selected value class="troca_lingua" data-pt="-- selecione curso --" data-en="-- select program --">
+          -- selecione curso --
+        </option>
         {% for curso in cursos %}
           <option value="{{curso.sigla}}" {% if usuario.aluno.curso2.sigla == curso.sigla %}selected{% endif %}>{{curso.nome}}</option>  
         {% endfor %}
@@ -141,7 +143,10 @@
       </label>
       
       <br>
-      <label for="cr">cr: </label> <input type="number" style="width: 5em; text-align: right;" min="0" max="10" step="0.0001" id="cr" name="cr" {% if usuario.aluno.cr %}value="{{usuario.aluno.cr|unlocalize}}"{% endif %}>
+      <label for="cr">
+        <span lang="pt">CR:</span>
+        <span lang="en" style="display: none;">GPA:</span>
+      </label> <input type="number" style="width: 5em; text-align: right;" min="0" max="10" step="0.0001" id="cr" name="cr" {% if usuario.aluno.cr %}value="{{usuario.aluno.cr|unlocalize}}"{% endif %}>
 
       <br>
       {% with externo=usuario.aluno.externo %}
@@ -230,7 +235,9 @@
         <span lang="en">Organization</span>
       </label></b>:
       <select name="organizacao" id="organizacao" class="selectpicker" title="Selecione organização" data-live-search="true" data-width="42%" data-size="10" >
-          <option disabled value=""> -- selecione uma organização -- </option>
+          <option disabled value="" class="troca_lingua" data-pt="-- selecione uma organização --" data-en="-- select an organization --">
+            -- selecione uma organização --
+          </option>
           {% for organizacao in organizacoes %}
             <option value="{{organizacao.id}}" {% if organizacao_selecionada.id == organizacao.id %}selected="selected"{% endif %} >
               {{organizacao.nome}} ({{organizacao.sigla}})
