--- a/professores/templates/professores/bancas_lista.html
+++ b/professores/templates/professores/bancas_lista.html
@@ -67,17 +67,23 @@
 
   <div>
     <select class="esconder" id="proximas" onchange="location = this.options[this.selectedIndex].value;">
-      <option value="todas" {% if periodo == "todas" %}selected="todas"{% endif %}>Todas</option>
+      <option value="todas" {% if periodo == "todas" %}selected="todas"{% endif %} class="troca_lingua" data-pt="Todas" data-en="All">
+        Todas
+      </option>
       {% for edicao in edicoes %}
         <option value="{{edicao}}"
           {% if periodo == edicao %}selected{% endif %}
         >{{edicao}}</option>
       {% endfor %}
-      <option value="proximas" {% if periodo == "proximas" %}selected="proximas"{% endif %}>Próximas</option>
+      <option value="proximas" {% if periodo == "proximas" %}selected="proximas"{% endif %} class="troca_lingua" data-pt="Próximas" data-en="Next">
+        Próximas
+      </option>
       {% if projeto %}
         <option value="{{projeto.id}}" selected>{{projeto}}</option>
       {% endif %}
     </select>
+
+
   
     <script>
       function tipo_banca(selectObject) {
@@ -92,17 +98,30 @@
     </script>
 
     <select class="esconder" id="tipo" onchange="tipo_banca(this)">
-      <option value="todos" {% if tipo == "todos" %}selected="todos"{% endif %} >todos</option>
-      <option value="Intermediária" {% if tipo == "Intermediária" %}selected{% endif %}>Intermediária</option>
-      <option value="Final" {% if tipo == "Final" %}selected{% endif %}>Final</option>
+      <option value="todos" {% if tipo == "todos" %}selected="todos"{% endif %} class="troca_lingua" data-pt="todas" data-en="all">
+        todas
+      </option>
+      <option value="Intermediária" {% if tipo == "Intermediária" %}selected{% endif %} class="troca_lingua" data-pt="Intermediária" data-en="Intermediate">
+        Intermediária
+      </option>
+      <option value="Final" {% if tipo == "Final" %}selected{% endif %} class="troca_lingua" data-pt="Final" data-en="Final">
+        Final</option>
       <option value="Falconi" {% if tipo == "Falconi" %}selected{% endif %}>Falconi</option>
-      <option value="Probation" {% if tipo == "Probation" %}selected{% endif %}>Probation</option>
+      <option value="Probation" {% if tipo == "Probation" %}selected{% endif %} class="troca_lingua" data-pt="Probatória" data-en="Probation">
+        Probatória
+      </option>
     </select>
   
-    <button class="btn btn-light btn-xs esconder open-modal" data-url="{% url 'bancas_criar' %}" href="{% url 'bancas_criar'%}" type="button">
-      <span lang="pt">Cadastrar Nova Banca</span>
-      <span lang="en" style="display: none;">Register New Examination Board</span>
-    </button>
+    <span class="esconder">
+      <a href="{% url 'bancas_criar'%}"
+       class="open-modal" style="cursor:pointer;"
+       data-url="{% url 'bancas_criar' %}">
+        <i class="fas fa-plus"></i>
+        <span lang="pt">Cadastrar Nova Banca</span>
+        <span lang="en" style="display: none;">Register New Examination Board</span>
+      </a>
+    </span>
+
   </div>
 
   {% include "informacoes_ml.html" %}
