--- a/professores/templates/professores/bancas_view.html
+++ b/professores/templates/professores/bancas_view.html
@@ -50,13 +50,19 @@
       <h5 id="documentacao" class="modal-title">
         {% if banca %}
           {% if banca.projeto.orientador.user != request.user and request.user.tipo_de_usuario != 4 %}
-            Visualizar Agendamento de
+            <span lang="pt">Visualizar Agendamento de</span>
+            <span lang="en" style="display: none;">View Schedule of</span>
           {% else %}
-            Editar Agendamento de
+            <span lang="pt">Editar Agendamento de</span>
+            <span lang="en" style="display: none;">Edit Schedule of</span>
           {% endif %}
         {% else %}
-          Agendar
-        {% endif %} Banca</h5>    
+          <span lang="pt">Agendar</span>
+          <span lang="en" style="display: none;">Schedule</span>
+        {% endif %}
+        <span lang="pt">Banca</span>
+        <span lang="en" style="display: none;">Examination Board</span>
+      </h5>    
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
@@ -66,7 +72,10 @@
 
     {% if not banca.projeto %}
       <div id="div_projetos" class="form-group">
-      <span style="margin-top: 12px;" for="projeto">Projeto:</span>
+      <span style="margin-top: 12px;" for="projeto">
+        <span lang="pt">Projeto:</span>
+        <span lang="en" style="display: none;">Project:</span>
+      </span>
       <select class="selectpicker" name="projeto" id="projeto" title="Selecione o projeto"
       data-width="75%" data-size="5"
       {% comment %} required {% endcomment %}
@@ -106,7 +115,10 @@
 
     {% if not banca.alocacao %}
       <div id="div_alocacoes" class="form-group">
-      <span style="margin-top: 12px;" for="alocacao">Alocação:</span>
+      <span style="margin-top: 12px;" for="alocacao">
+        <span lang="pt">Alocação:</span>
+        <span lang="en" style="display: none;">Allocation:</span>
+      </span>
       <select class="selectpicker" name="alocacao" id="alocacao" title="Selecione a alocação"
       data-width="75%" data-size="5" 
       {% comment %} required {% endcomment %}
@@ -146,39 +158,44 @@
       <input type="hidden" name="alocacao" value="{{banca.alocacao.id}}">
     {% endif %}
 
-
-    Título: 
+    <span lang="pt">Título:</span>
+    <span lang="en" style="display: none;">Title:</span>
     <a style="display: inline;" id="titulo_link" name="titulo_link" {% if banca and banca.get_projeto %}href="{% url 'projeto_completo' banca.get_projeto.id %}"{% endif %}>
       <span id="titulo" name="titulo">
         {% if banca and banca.get_projeto %}
           {{banca.get_projeto.get_titulo}}
           {% include "tipo_projeto.html" with projeto=banca.get_projeto %}
         {% else %}
-          Titulo de Projeto não definido
+          <span lang="pt">Título de Projeto não definido</span>
+          <span lang="en" style="display: none;">Project Title not defined</span>
         {% endif %}
       </span>
     </a>
     <br>
 
-    Organização: 
+    <span lang="pt">Organização:</span>
+    <span lang="en" style="display: none;">Organization:</span>
     <a id="organizacao_link" name="organizacao_link" {% if banca and banca.get_projeto and banca.get_projeto.organizacao %}href="{% url 'organizacao_completo' banca.get_projeto.organizacao.id %}"{% endif %}>
       <span id="organizacao" name="organizacao">
         {% if banca and banca.get_projeto and banca.get_projeto.organizacao %}
           {{banca.get_projeto.organizacao}}
         {% else %}
-          Organização Parceira não definida
+          <span lang="pt">Organização Parceira não definida</span>
+          <span lang="en" style="display: none;">Partner Organization not defined</span>
         {% endif %}
       </span>
     </a>
     <br>
     
-    Orientador{% if banca and banca.get_projeto and banca.get_projeto.orientador.user.genero == "F" %}a{% endif %}: 
+    <span lang="pt">Orientador{% if banca and banca.get_projeto and banca.get_projeto.orientador.user.genero == "F" %}a{% endif %}:</span>
+    <span lang="en" style="display: none;">Advisor:</span>
     <a id="orientador_link" name="orientador_link" {% if banca and banca.get_projeto and banca.get_projeto.orientador %}href="{% url 'professor_detail' banca.get_projeto.orientador.id %}"{% endif %}>
       <span id="orientador" name="orientador">
         {% if banca and banca.get_projeto and banca.get_projeto.orientador %}
           {{banca.get_projeto.orientador}}
         {% else %}
-          Sem identificação de Orientador(a)
+          <span lang="pt">Sem identificação de Orientador(a)</span>
+          <span lang="en" style="display: none;">No Advisor identified</span>
         {% endif %}
       </span>
     </a>
@@ -188,7 +205,8 @@
     {% with coorientadores=banca.get_projeto.coorientador_set.all %}
       {% if coorientadores %}
         <div class="coorientacao">
-          Coorientação: 
+          <span lang="pt">Coorientação:</span>
+          <span lang="en" style="display: none;">Co-advisoring:</span>
             {% for coorientador in coorientadores %}
               <a class="imprimir" href="{% url 'user_detail' coorientador.usuario.id %}">
                 {{coorientador.usuario.get_full_name}} 
@@ -197,18 +215,23 @@
               {% if not forloop.last %}; {% endif %}
             {% endfor %}
         </div>
-        <div style="font-size: small; color: darkgoldenrod; line-height:1;">Coorientadores não são automaticamente agendados na banca, selecione abaixo para convidar coorientador para a banca.</div>
+        <div style="font-size: small; color: darkgoldenrod; line-height:1;">
+          <span lang="pt">Coorientadores não são automaticamente agendados na banca, selecione abaixo para convidar coorientador para a banca.</span>
+          <span lang="en" style="display: none;">Co-advisors are not automatically scheduled for the examination board, select below to invite co-advisor to the examination board.</span>
+        </div>
       {% endif %}
     {% endwith %}
     
     <div id="div_estudante">
-      Estudante: 
+      <span lang="pt">Estudante:</span>
+      <span lang="en" style="display: none;">Student:</span>
       <a id="estudante_link" name="estudante_link" {% if banca and banca.alocacao and banca.alocacao.aluno %}href="{% url 'estudante_detail' banca.alocacao.aluno.id %}"{% endif %}>
         <span id="estudante" name="estudante">
           {% if banca and banca.alocacao and banca.alocacao.aluno %}
             {{banca.alocacao.aluno}}
           {% else %}
-            Sem estudante
+            <span lang="pt">Sem estudante</span>
+            <span lang="en" style="display: none;">No student</span>
           {% endif %}
         </span>
       </a>
@@ -227,7 +250,9 @@
           <label for="tipo{{numero}}"><input class="tipo_banca" id="tipo{{numero}}" type="radio" name="tipo" value="{{numero}}"
             {% if banca and banca.projeto.orientador.user != request.user and request.user.tipo_de_usuario != 4 %}disabled{% endif %}
             {% if banca.tipo_de_banca == numero or tipob == numero %}checked{% endif %} required> {{texto}}
-            (duração padrão: {% if numero == 2 %}30{% elif numero == 3 %}90{% else %}120{% endif %}min)</label>
+            <span lang="pt">(duração padrão:</span>
+            <span lang="en" style="display: none;">(standard duration:</span>
+            {% if numero == 2 %}30{% elif numero == 3 %}90{% else %}120{% endif %}min)</label>
             <br>
         </div>
       {% endfor %}
@@ -278,7 +303,10 @@
     <br>
     <div>
         <label for="inicio" style="white-space: nowrap; display:inline-block; margin-bottom: 3px;">
-        <span style="display:inline-block; width:5.5ex; text-align:right;">Início:</span>
+        <span style="display:inline-block; width:5.5ex; text-align:right;">
+          <span lang="pt">Início:</span>
+          <span lang="en" style="display: none;">Start:</span>
+        </span>
         <input id="inicio" type="datetime-local" name="inicio" class="horario_banca"
         {% if banca and banca.projeto.orientador.user != request.user and request.user.tipo_de_usuario != 4 %}disabled{% endif %}
         {% if banca %}
@@ -291,7 +319,10 @@
         </label>
       
         <label for="fim" style="white-space: nowrap; display:inline-block; margin-bottom: 3px;">
-        <span style="display:inline-block; width:5.5ex; text-align:right">Fim:</span>
+        <span style="display:inline-block; width:5.5ex; text-align:right">
+          <span lang="pt">Fim:</span>
+          <span lang="en" style="display: none;">End:</span>
+        </span>
         <input id="fim" type="datetime-local" name="fim" class="horario_banca"
         {% if banca and banca.projeto.orientador.user != request.user and request.user.tipo_de_usuario != 4 %}disabled{% endif %}
         {% if banca %}
@@ -331,7 +362,10 @@
       });
     </script>
 
-    <label for="local">Local:</label> 
+    <label for="local">
+      <span lang="pt">Local:</span>
+      <span lang="en" style="display: none;">Local:</span>
+    </label> 
     <input id="local" name="local" type="text" size="36" maxlength="{% max_length Banca "location" %}"
     {% if banca and banca.projeto.orientador.user != request.user and request.user.tipo_de_usuario != 4 %}disabled{% endif %}
     style="max-width: 100%;" placeholder="alocado pela equipe de reservas"
@@ -357,7 +391,10 @@
       </script>
     {% endif %}
 
-    <label for="link">Link de Vídeo-conferência:</label>
+    <label for="link">
+      <span lang="pt">Link de Vídeo-conferência:</span>
+      <span lang="en" style="display: none;">Video-conference Link:</span>
+    </label>
     <input id="link" name="link" type="text" size="36" maxlength="{% max_length Banca "link" %}" 
     {% if banca and banca.projeto.orientador.user != request.user and request.user.tipo_de_usuario != 4 %}disabled{% endif %}
     style="max-width: 100%;" placeholder="somente se necessário"
@@ -370,7 +407,10 @@
     <table>
       <tr>
         <td>
-          <label for="membro1">Membro&nbsp;1<span class="opt_full"> da Banca</span>:</label>
+          <label for="membro1">
+            <span lang="pt">Membro&nbsp;1<span class="opt_full"> da Banca</span>:</span>
+            <span lang="en" style="display: none;"><span class="opt_full">Board </span>Member&nbsp;1:</span>
+          </label>
         </td>
         <td>
           <select name="membro1" class="pessoas custom-select custom-select-sm membros" id="membro1" title="Selecione membro da banca"
@@ -385,7 +425,10 @@
       </tr>
       <tr>
         <td>
-          <label for="membro2">Membro&nbsp;2<span class="opt_full"> da Banca</span>:</label>
+          <label for="membro2">
+            <span lang="pt">Membro&nbsp;2<span class="opt_full"> da Banca</span>:</span>
+            <span lang="en" style="display: none;"><span class="opt_full">Board </span>Member&nbsp;2:</span>
+          </label>
         </td>
         <td>
           <select name="membro2" class="pessoas custom-select custom-select-sm membros" id="membro2" title="Selecione membro da banca"
@@ -400,7 +443,10 @@
       </tr>
       <tr>
         <td>
-          <label for="membro3">Membro&nbsp;3<span class="opt_full"> da Banca</span>:</label>
+          <label for="membro3">
+            <span lang="pt">Membro&nbsp;3<span class="opt_full"> da Banca</span>:</span>
+            <span lang="en" style="display: none;"><span class="opt_full">Board </span>Member&nbsp;3:</span>
+          </label>
         </td>
         <td>
           <select name="membro3" class="pessoas custom-select custom-select-sm membros" id="membro3" title="Selecione membro da banca"
@@ -414,7 +460,9 @@
     {% if banca %}
       <br>
       <div style="overflow-wrap: break-word;">
-        &#9733; Formulário de Avaliação:
+        &#9733;
+        <span lang="pt">Formulário de Avaliação:</span>
+        <span lang="en" style="display: none;">Evaluation Form:</span>
         <a class="url_reativo" target="_blank" rel="noopener noreferrer" 
           href="{% url 'banca_avaliar' banca.slug %}">
           https://{{ request.get_host }}{% url 'banca_avaliar' banca.slug %}
@@ -433,22 +481,35 @@
     <div id="mensagens" style="font-size: small; flex: 1;">
       <input type="checkbox" name="enviar_mensagem" value="sim" id="enviar_mensagem"
       {% if user.tipo_de_usuario != 4 %}checked{% endif %}>
-      <label for="enviar_mensagem">Enviar mensagem para envolvidos</label>
+      <label for="enviar_mensagem">
+        <span lang="pt">Enviar mensagem para envolvidos</span>
+        <span lang="en" style="display: none;">Send message to involved people</span>
+      </label>
     </div>
     
     <div id="botoes" style="margin-left: auto;">
-      <button id="fecha_modal" type="button" class="btn btn-secondary mb-1" data-dismiss="modal">Fechar</button>
+      <button id="fecha_modal" type="button" class="btn btn-secondary mb-1" data-dismiss="modal">
+        <span lang="pt">Fechar</span>
+        <span lang="en" style="display: none;">Close</span>
+      </button>
 
       {% if not banca %} 
-        <button id="submit" class="btn btn-primary mb-1" type="submit" name="atualizar">Agendar</button>
+        <button id="submit" class="btn btn-primary mb-1" type="submit" name="atualizar">
+          <span lang="pt">Agendar</span>
+          <span lang="en" style="display: none;">Schedule</span>
+        </button>
       {% else %}
         {% if banca.projeto.orientador.user == request.user or request.user.tipo_de_usuario == 4 %} 
           <button id="submit" class="btn btn-primary mb-1" type="submit" name="atualizar"
-          onclick="operacao = 'atualizar';">Atualizar</button>
+           onclick="operacao = 'atualizar';">
+            <span lang="pt">Atualizar</span>
+            <span lang="en" style="display: none;">Update</span>
+          </button>
           
           <button id="excluir" class="btn btn-primary mb-1" type="submit" name="excluir" formnovalidate
-          onClick="operacao = 'excluir'; return confirm('Tem certeza que deseja excluir agendamento de banca?');">
-            Excluir Banca
+           onClick="operacao = 'excluir'; return confirm('Tem certeza que deseja excluir agendamento de banca?');">
+            <span lang="pt">Excluir</span>
+            <span lang="en" style="display: none;">Delete</span>
           </button>
         {% endif %}
       {% endif %}
