--- a/templates/calendario_dinamicas.html
+++ b/templates/calendario_dinamicas.html
@@ -19,7 +19,12 @@
 <div class="wrap">
   <div class="one">
     <br><br>
-    <a href="{% url 'dinamicas_lista'%}"><h5>Listar Mentorias</h5></a>
+    <a href="{% url 'dinamicas_lista'%}">
+      <h5>
+        <span lang="pt">Listar Mentorias</span>
+        <span lang="en">List Mentoring</span>
+      </h5>
+    </a>
   </div>
   <div class="two" id='calendar'></div>
 </div>
@@ -32,10 +37,16 @@
   <div class="legenda" style="display: flex;">
     <div class="legenda-block">
       <div id="leg_horario" class="legenda-item">
-        <div class="legenda-texto"><font id="color_horario_agendado">&#9608;</font>&nbsp;Horário Agendado (com projeto alocado)</div>
+        <div class="legenda-texto"><font id="color_horario_agendado">&#9608;</font>&nbsp;
+          <span lang="pt">Horário Agendado (com projeto alocado)</span>
+          <span lang="en" style="display: none;">Scheduled Time (with allocated project)</span>
+        </div>
       </div>
       <div id="leg_aberto" class="legenda-item">
-        <div class="legenda-texto"><font id="color_horario_em_aberto">&#9608;</font>&nbsp;Horário em Aberto (sem projeto alocado)</div>
+        <div class="legenda-texto"><font id="color_horario_em_aberto">&#9608;</font>&nbsp;
+          <span lang="pt">Horário em Aberto (sem projeto alocado)</span>
+          <span lang="en" style="display: none;">Open Time (without allocated project)</span>
+        </div>
       </div>
     </div>
   </div>
@@ -58,127 +69,155 @@
     });
   }
 
-
   var calendar = null;
 
   function montar_calendario(defaultView="dayGridMonth", defaultDate=null) {
 
     var calendarEl = document.getElementById("calendar");
 
-    var calendar = new FullCalendar.Calendar(calendarEl, {
-      plugins: [ "interaction", "dayGrid", "timeGrid", "list" ],
-      header: {
-        left: "prev,next today",
-        center: "title",
-        right: "dayGridMonth,timeGridWeek,timeGridDay,listMonth"
-      },
-      locale: "pt-br",
-      navLinks: true, // can click day/week names to navigate views
-      businessHours: true, // display business hours
-      editable: true,
-      height: "auto",
-      eventTimeFormat: {
-        hour: "2-digit", //2-digit, numeric
-        minute: "2-digit", //2-digit, numeric
-        meridiem: false, //lowercase, short, narrow, false (display of AM/PM)
-        hour12: false //true, false
-      },
-      eventRender: function(info) {
-        if (!info.event.allDay) {
-          if (info.view.type === "dayGridMonth" || info.view.type === "timeGridWeek") {
-            let time = info.event.start.getHours() + ':' + info.event.start.getMinutes().toString().replace(/^(\d)$/, '0$1');
-            let nome_facilitador = "F: sem facilitador"
-            if (info.event.extendedProps.facilitador) {
-              let facilitador = info.event.extendedProps.facilitador.split(" ");
-              if(facilitador.length > 1) {
-                nome_facilitador = "F: " + facilitador[0] + ' ' + facilitador[facilitador.length - 1];
-              }
-            }
-
-            let nome_projeto = "P: sem projeto"
-            if (info.event.extendedProps.projeto) {
-              let projeto = info.event.extendedProps.projeto;
-              if(projeto) {
-                  //nome_projeto = "P: " + projeto[0] + ' ' + projeto[projeto.length - 1];
-                  nome_projeto = "P: " + projeto;
-              }
-            }
-
-            info.el.innerHTML = "<b>" + time + "</b><br><nobr style='color:#FAD2D2'>" + info.event.extendedProps.organizacao +
-              "</nobr><br><nobr style='color:#F6F5A3'>" + info.event.extendedProps.local + 
-                "</nobr><br><nobr style='color:#FEFEFE'>" + nome_facilitador + 
-                "</nobr><br><nobr style='color:#E8E8E8'>" + nome_projeto + "</nobr>";
-
-            {% comment %} info.el.className += " m_agendada"; {% endcomment %}
-          } 
-        }
-      },
-      events: [
-        {% for encontro in encontros %} 
+    function cria_calendario(locale="pt-br") {
+      calendar = new FullCalendar.Calendar(calendarEl, {
+        plugins: [ "interaction", "dayGrid", "timeGrid", "list" ],
+        header: {
+          left: "prev,next today",
+          center: "title",
+          right: "dayGridMonth,timeGridWeek,timeGridDay,listMonth"
+        },
+        locale: locale,
+        navLinks: true, // can click day/week names to navigate views
+        businessHours: true, // display business hours
+        editable: true,
+        height: "auto",
+        eventTimeFormat: {
+          hour: "2-digit", //2-digit, numeric
+          minute: "2-digit", //2-digit, numeric
+          meridiem: false, //lowercase, short, narrow, false (display of AM/PM)
+          hour12: false //true, false
+        },
+        businessHours: [ // Horas indicadas para as bancas
           {
-            title: ""
-              {% if encontro.facilitador %}+ `Facilitador: {{encontro.facilitador}}\n`{% endif %}
-              {% if encontro.location %}+ `Local/Link: {{encontro.location}}\n`{% endif %}
-              {% if encontro.projeto %}
-                + `Projeto: ({{encontro.projeto.organizacao.sigla}}) {{encontro.projeto.get_titulo}}` +
-                `{% if encontro.facilitador %}\nFacilitador: {{encontro.facilitador}}{% endif %}` +
-                `{% if encontro.projeto.orientador %}\nOrientador: {{encontro.projeto.orientador}}{% endif %}`
-              {% endif %},
-              projeto: {% if encontro.projeto %}`{{encontro.projeto.get_titulo}}`{% else %}null{% endif %},
-              organizacao: "{{encontro.projeto.organizacao.sigla}}",
-              facilitador: {% if encontro.facilitador %}"{{encontro.facilitador.get_full_name}}"{% else %}null{% endif %},
-              orientador: {% if encontro.projeto.orientador %}"{{encontro.projeto.orientador}}"{% else %}null{% endif %},
-              local: "{{encontro.location}}",
-              start: '{{encontro.startDate.year}}-{{encontro.startDate.month|stringformat:"02d"}}-{{encontro.startDate.day|stringformat:"02d"}}T{{encontro.startDate.hour|stringformat:"02d"}}:{{encontro.startDate.minute|stringformat:"02d"}}:00',
-              end: '{{encontro.endDate.year}}-{{encontro.endDate.month|stringformat:"02d"}}-{{encontro.endDate.day|stringformat:"02d"}}T{{encontro.endDate.hour|stringformat:"02d"}}:{{encontro.endDate.minute|stringformat:"02d"}}:00',
-              id: "{{encontro.id}}",
-              {% if encontro.projeto %}backgroundColor: color_horario_agendado{% else %}backgroundColor: color_horario_em_aberto{% endif %},
-              description: {% if encontro.projeto %}"Horário Marcado"{% else %}"Horário Livre"{% endif %},
-              className: {% if encontro.projeto %}" m_agendada"{% else %}" m_n_agendada"{% endif %},
+            daysOfWeek: [ 1, 2, 3, 4, 5 ], // Segunda, Terça, Quarta, Quinta, Sexta
+            startTime: "07:30",
+            endTime: "20:00"
           },
-        {% endfor %}
-      ],
-      
-      eventClick: function(event, jsEvent, view) {
-        // Para editar uma mentoria
-        var elem = document.createElement( "span" );
-        $( elem ).data( "url", "{% url 'dinamicas_editar' %}"+event.event.id);
-        abrir_modal.call(elem, null);
-    },
+        ],
+        eventTextColor: "#FAFAFA",
+        eventRender: function(info) {
+          if (!info.event.allDay) {
+            if (info.view.type === "dayGridMonth" || info.view.type === "timeGridWeek") {
+              let time = info.event.start.getHours() + ':' + info.event.start.getMinutes().toString().replace(/^(\d)$/, '0$1');
+              let nome_facilitador = "F: sem facilitador"
+              if (info.event.extendedProps.facilitador) {
+                let facilitador = info.event.extendedProps.facilitador.split(" ");
+                if(facilitador.length > 1) {
+                  nome_facilitador = "F: " + facilitador[0] + ' ' + facilitador[facilitador.length - 1];
+                }
+              }
 
-      dateClick: function(info) {
-        // Para criar uma nova mentoria, reproveitando a data clicada
-        var elem = document.createElement( "span" );
-        $( elem ).data( "url", "{% url 'dinamicas_criar' %}");
-        $( elem ).data( "data", info.dateStr);
-        abrir_modal.call(elem, null);
+              let nome_projeto = "P: sem projeto"
+              if (info.event.extendedProps.projeto) {
+                let projeto = info.event.extendedProps.projeto;
+                if(projeto) {
+                    //nome_projeto = "P: " + projeto[0] + ' ' + projeto[projeto.length - 1];
+                    nome_projeto = "P: " + projeto;
+                }
+              }
+
+              info.el.innerHTML = "<b>" + time + "</b><br><nobr style='color:#FAD2D2'>" + info.event.extendedProps.organizacao +
+                "</nobr><br><nobr style='color:#F6F5A3'>" + info.event.extendedProps.local + 
+                  "</nobr><br><nobr style='color:#FEFEFE'>" + nome_facilitador + 
+                  "</nobr><br><nobr style='color:#E8E8E8'>" + nome_projeto + "</nobr>";
+
+              {% comment %} info.el.className += " m_agendada"; {% endcomment %}
+            } 
+          }
+        },
+        events: [
+          {% for encontro in encontros %} 
+            {
+              title: ""
+                {% if encontro.facilitador %}+ `Facilitador: {{encontro.facilitador}}\n`{% endif %}
+                {% if encontro.location %}+ `Local/Link: {{encontro.location}}\n`{% endif %}
+                {% if encontro.projeto %}
+                  + `Projeto: ({{encontro.projeto.organizacao.sigla}}) {{encontro.projeto.get_titulo}}` +
+                  `{% if encontro.facilitador %}\nFacilitador: {{encontro.facilitador}}{% endif %}` +
+                  `{% if encontro.projeto.orientador %}\nOrientador: {{encontro.projeto.orientador}}{% endif %}`
+                {% endif %},
+                projeto: {% if encontro.projeto %}`{{encontro.projeto.get_titulo}}`{% else %}null{% endif %},
+                organizacao: "{{encontro.projeto.organizacao.sigla}}",
+                facilitador: {% if encontro.facilitador %}"{{encontro.facilitador.get_full_name}}"{% else %}null{% endif %},
+                orientador: {% if encontro.projeto.orientador %}"{{encontro.projeto.orientador}}"{% else %}null{% endif %},
+                local: "{{encontro.location}}",
+                start: '{{encontro.startDate.year}}-{{encontro.startDate.month|stringformat:"02d"}}-{{encontro.startDate.day|stringformat:"02d"}}T{{encontro.startDate.hour|stringformat:"02d"}}:{{encontro.startDate.minute|stringformat:"02d"}}:00',
+                end: '{{encontro.endDate.year}}-{{encontro.endDate.month|stringformat:"02d"}}-{{encontro.endDate.day|stringformat:"02d"}}T{{encontro.endDate.hour|stringformat:"02d"}}:{{encontro.endDate.minute|stringformat:"02d"}}:00',
+                id: "{{encontro.id}}",
+                {% if encontro.projeto %}backgroundColor: color_horario_agendado{% else %}backgroundColor: color_horario_em_aberto{% endif %},
+                description: {% if encontro.projeto %}"Horário Marcado"{% else %}"Horário Livre"{% endif %},
+                className: {% if encontro.projeto %}" m_agendada"{% else %}" m_n_agendada"{% endif %},
+            },
+          {% endfor %}
+        ],
+        
+        eventClick: function(event, jsEvent, view) {
+          // Para editar uma mentoria
+          var elem = document.createElement( "span" );
+          $( elem ).data( "url", "{% url 'dinamicas_editar' %}"+event.event.id);
+          abrir_modal.call(elem, null);
       },
 
+        dateClick: function(info) {
+          // Para criar uma nova mentoria, reproveitando a data clicada
+          var elem = document.createElement( "span" );
+          $( elem ).data( "url", "{% url 'dinamicas_criar' %}");
+          $( elem ).data( "data", info.dateStr);
+          abrir_modal.call(elem, null);
+        },
 
-      eventMouseEnter: function (info) {
-        $(info.el).tooltip({
-              title: info.event.extendedProps.description,
-              html: true,
-        }).tooltip("show");
-      },
 
-      eventDragStart: function(info) {
-        $(".tooltip").remove();
-      },
-      
-      eventResize: function(info) {
-        $(".tooltip").remove();
-        atualiza(info.event);
-      },
+        eventMouseEnter: function (info) {
+          $(info.el).tooltip({
+                title: info.event.extendedProps.description,
+                html: true,
+          }).tooltip("show");
+        },
 
-      eventDrop: function(info) {
-        $(".tooltip").remove();
-        atualiza(info.event);
-      },
+        eventDragStart: function(info) {
+          $(".tooltip").remove();
+        },
+        
+        eventResize: function(info) {
+          $(".tooltip").remove();
+          atualiza(info.event);
+        },
+
+        eventDrop: function(info) {
+          $(".tooltip").remove();
+          atualiza(info.event);
+        },
+
+      });
+
+      calendar.render();
+    }
+
+    $(document).ready(function() {
+
+      function lingua_calendario() {
+        if(calendar) calendar.destroy();
+        if(localStorage.getItem("lingua") == "pt") {
+          cria_calendario("pt-br");
+        } else {
+          cria_calendario("en");
+        }
+      }
+
+      lingua_calendario();
+
+      document.addEventListener("languageChanged", function() {
+        lingua_calendario();
+      });
 
     });
-
-    calendar.render();
 
     $("#color_horario_agendado").css("color", color_horario_agendado);
     $("#color_horario_em_aberto").css("color", color_horario_em_aberto);
